# NextView

./: .gitignore  BUILD.md  CMakeLists.txt  NextView_AppStore.html  README.md  build_error.txt  build_output.txt  build_ui.bat  configure.bat  do_build.bat  package.bat  run_build.bat
resources/: resources.qrc
resources/icons/: make_icon.bat  placeholder.jfif
src/: main.cpp
src/Models/: MediaFile.h  Project.h  ProjectManager.cpp  ProjectManager.h
src/UI/: ActivationDialog.h  AnimUtils.h  BrowsePage.cpp  BrowsePage.h  ConfirmDialog.h  GlassNavBar.cpp  GlassNavBar.h  GlassWidget.cpp  GlassWidget.h  ImageViewer.cpp  ImageViewer.h  LoadingOverlay.h  MainWindow.cpp  MainWindow.h  MarqueeLabel.h  MediaItemWidget.cpp  MediaItemWidget.h  ProjectCard.cpp  ProjectCard.h  ProjectListPage.cpp  ProjectListPage.h  SearchBar.cpp  SearchBar.h  SettingsPanel.cpp  SettingsPanel.h  SplashOverlay.cpp  SplashOverlay.h  VideoPlayerDialog.cpp  VideoPlayerDialog.h  WaterfallWidget.cpp  WaterfallWidget.h
src/Utils/: CacheManager.cpp  CacheManager.h  FFmpegHelper.cpp  FFmpegHelper.h  LicenseManager.cpp  LicenseManager.h
src/Workers/: CacheWorker.cpp  CacheWorker.h  ScanWorker.cpp  ScanWorker.h
